--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ annotated-types==0.6.0
 anyio==3.7.1
 click==8.1.7
 colorama==0.4.6
+dlib==19.24.2
 exceptiongroup==1.2.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 fastapi==0.104.1
 h11==0.14.0
 idna==3.6
 numpy==1.26.2
 opencv-python==4.8.1.78
+Pillow==10.1.0
 pydantic==2.5.2
 pydantic_core==2.14.5
 python-multipart==0.0.6
